Fixed footer padding on mobile devices

--- a/themes/ek2012/less/ek.less
+++ b/themes/ek2012/less/ek.less
@@ -1358,6 +1358,28 @@ a {
 			}
 		}
 	}
+	.span4 {
+		@media (max-width: 767px) {
+			padding: 20px;
+			.span1 {
+				float: left;
+				width: 20%;
+			}
+			.span2 {
+				float: left;
+				width: 40%;
+			}
+		}
+		@media (max-width: 480px) {
+			padding: 20px;
+			.span1 {
+				width: 25%;
+			}
+			.span2 {
+				width: 50%;
+			}
+		}
+	}
 }
 
 h1 {
